Make mentoring organization eligibility rules less perfectionist
People from marginalized groups are more likely to not apply to
opportunities if they don't meet all requirements. This is true when
applying to jobs, and after talking to some potential mentoring
organizations, I think it may also be true for coordinators and mentors
who are from marginalized groups.

 - lower the number of required contributors to 2-3 people - this is
   more realistic for what actually happens in Outreachy currently

 - state that mentoring organizations don't need to follow every since
   open source practice, and that we are happy to work with them to
   improve their practices.

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -156,7 +156,7 @@ Community Guide | Outreachy Documentation
 
 <p>New communities must meet these rules to be eligible to participate in Outreachy. The Outreachy organizers and the Outreachy Project Leadership Committee (PLC) will review the community's application to ensure they meet our participation rules.</p>
 
-<p>We encourage communities with more than 5 core contributors to participate. However, this is not a strict requirement.</p>
+<p>We encourage communities with at least 2-3 core contributors to participate. However, this is not a strict requirement.</p>
 
 <p>Each section below will list guidelines for the types of communities that can participate in Outreachy.</p>
 
@@ -178,7 +178,7 @@ Community Guide | Outreachy Documentation
 
 <p>All open source communities that participate in Outreachy need to be focused on open, public work.</p>
 
-<p>We welcome communities who implement any of the following open source practices:</p>
+<p>We welcome communities who implement <i>any</i> of the following open source practices:</p>
 
 <ul>
 	<li>publicly available source code</li>
@@ -192,6 +192,10 @@ Community Guide | Outreachy Documentation
 	<li>open data sets</li>
 	<li>open data science</li>
 </ul>
+
+<p>If you are missing some of the above practices, please do submit an application to mentor! We understand that open source communities continually improve over time.</p>
+
+<p>Outreachy is happy to work with you to improve your community's open source practices. Many communities find that participating in Outreachy helps them improve their practices, especially around improving their on-boarding documentation.</p>
 
 {% include 'home/snippet/community_eligibility_caveats.html' %}
 
