Fix Intel opportunities page links

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -18,7 +18,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
             <p></p>
             <h3>20-39</h3>
             <ul>
-                <li><p>Intel <a href="https://01.org/about/jobs">Open Source Technology Center</a> and <a href="http://www.intel.com/jobs">company-wide</a> (Linux kernel, OpenStack, Yocto Project jobs)  </p></li>
+                <li><p><a href="https://open.intel.com/">Open at Intel</a> and <a href="http://www.intel.com/jobs">Intel jobs</a></p></li>
                 <li><p><a href="https://wikimediafoundation.org/wiki/Job_openings">Wikimedia</a>  </p></li>
             </ul>
             <p></p>
