Fix typo in blog post sign-off line

--- a/home/templates/home/blog/2022-12-05-thank-you.html
+++ b/home/templates/home/blog/2022-12-05-thank-you.html
@@ -62,7 +62,7 @@ Thank you for all your support!
 </p>
 
 <p>
-Signed the Outreachy team:
+Signed by the Outreachy organizer team:
 <BR>Anna e só
 <BR>Karen Sandler
 <BR>Omotola Omotayo
