Replace image on thank-you post, and center image
Replace image of "Thank you volunteers" cake. A mentor pointed out that
not all Outreachy mentors are volunteers. Some mentors are employees of
a sponsor, who have an agreement with their managers to use work time to
mentor Outreachy interns. Other mentors are paid by their open source or
open science community for the hours they spend mentoring Outreachy
interns.

Replace the image with a generic (but colorful!) Thank you card:

https://www.flickr.com/photos/15636237@N04/49863927812/

Use bootstrap's containers to center the image.

--- a/home/templates/home/blog/2022-12-05-thank-you.html
+++ b/home/templates/home/blog/2022-12-05-thank-you.html
@@ -24,8 +24,14 @@ Outreachy supports one-on-one mentorship and open source contribution. The succe
 This is a special recognition for all our mentors and mentoring organization coordinators for their hard work!
 </p>
 
-<img src="{% static 'img/thank-you-volunteers-cake-cc-by-sa-san-jose-public-library.jpg' %}" alt="A large cake with white frosting and multi-colored sprinkles. The cake reads 'Thank you volunteers'. Photo is cc-by-sa 2.0 San José Public Library" class="img-fluid">
-<p><i>Photo CC BY SA 2.0 San José Public Library</i></p>
+<div class="container-fluid">
+	<div class="row justify-content-center">
+		<div class="col-span">
+			<img src="{% static 'img/thank-you-card-flickr-cc-by-virginia-l.jpg' %}" alt="A brightly colored thank you card, with a rainbow on the card cover. Photo is cc-by 2.0 Virginia L." class="img-fluid">
+			<p><i>Photo CC BY 2.0 Virginia L.</i></p>
+		</div>
+	</div>
+</div>
 
 <h2>Thank you December 2022 community coordinators</h2>
 
