Move links to docs to top of TOC, add doc links to mentor FAQ and community guide

--- a/home/templates/home/docs/toc.html
+++ b/home/templates/home/docs/toc.html
@@ -12,15 +12,18 @@ Table of Contents | Outreachy Documentation
 
 <p>If you have a question that isn't answered here, please <a href="{% url 'contact-us' %}">contact us</a>. We welcome additions and feedback on our documentation. Feel free to <a href='https://github.com/outreachy/website/'>file an issue or send us a pull request</a>.
 
+<h2>Outreachy Guides</h2>
+
+<p><a href='{% url 'docs-applicant' %}'>Applicant Guide</a></p>
+<p><a href='{% url 'docs-internship' %}'>Internship Guide</a></p>
+<p><a href='{% url 'docs-community' %}'>Community Guide</a></p>
+<p><a href="/mentor/">Mentor Documentation</a></p>
+<p><a href="/mentor/mentor-faq/">Mentor FAQ</a></p>
+
 <h2>How the documentation is organized</h2>
 
 <p>Outreachy documentation is organized based on participant's role. Some information is useful to multiple types of participants. That information is duplicated in multiple sections.</p>
 <p>Outreachy participant roles:</p>
 {% include "home/snippet/roles.html" %}
 
-<h2>Outreachy Guides</h2>
-
-<p><a href='{% url 'docs-applicant' %}'>Applicant Guide</a></p>
-<p><a href='{% url 'docs-internship' %}'>Internship Guide</a></p>
-<p><a href="/mentor/">Mentor and Coordinator Guide</a></p>
 {% endblock %}
