Remove Wellcome Trust mention as an Outreachy open science sponsor
Wellcome Trust worked with Outreachy for three internship cohorts. That
partnership is now ended. Remove details from Community Guide and
community sign-up form.

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -330,7 +330,7 @@ Community Guide | Outreachy Documentation
 
 <p><b>Humanitarian open source communities</b> are eligible for interns to be fully funded by the Outreachy general fund.</p>
 
-<p><b>Open science communities</b> are eligible for interns to be fully funded by Wellcome Trust.</p>
+<p><b>Open science communities</b> are eligible for interns to be fully funded by the Outreachy general fund.</p>
 
 <p><b>Other communities</b> must secure their own funding for at least one intern (${{ current_round.sponsorship_per_intern|intcomma }} USD). After that external funding is secured, they can apply for additional interns to be funded by the Outreachy general fund.</p>
 
@@ -358,27 +358,9 @@ Community Guide | Outreachy Documentation
 
 <p>Outreachy is pleased to work with <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> to provide funding for open science interns. Please see our <a href="#community-types-open-science-projects">guidelines for open science communities</a>.</p>
 
-<h4 id='wellcome-trust-funding'>Wellcome Trust funding</h4>
-
-<p>Outreachy is pleased to work with <a href="https://wellcome.org/">Wellcome Trust</a> to provide funding for open science interns. Wellcome Trust is focused on funding Outreachy interns working on open science projects that address urgent health challenges or discovery research.</p>
-
-<p>Open science communities are invited to apply for Wellcome Trust funding when first signing up to participate in Outreachy. If your community is approved, Wellcome Trust will fully fund at least one intern.</p>
-
-<p>In order to qualify for funding from Wellcome Trust, projects must be:</p>
-
-<ul>
-	<li><b>open source</b>: your project's source code and creative works must be published under an open source license</li>
-
-	<li><b>community</b>: your project should have at least 2-3 people who make regular open source contributions to your project</li>
-
-	<li><b>open science</b>: further <a href="https://wellcome.org/what-we-do/discovery-research">discovery of scientific research</a>, or create tools for scientists</li>
-
-	<li>tackle one of the following challenges: <a href="https://wellcome.org/what-we-do/infectious-disease">infectious diseases</a>, <a href="https://wellcome.org/what-we-do/climate-and-health">the health impacts of climate change</a>, or <a href="https://wellcome.org/what-we-do/mental-health">mental health</a></li>
-</ul>
-
 <h3 id='partial-general-funding'><a href='#partial-general-funding'>3.3.4 Outreachy general fund: Additional intern funding</a></h3>
 
-<p>As explained in the sections above, communities must find their own funding, or apply for funding from the Outreachy general fund or Wellcome Trust. Once funding for one intern is secured, communities will be approved to participate in Outreachy.</p>
+<p>As explained in the sections above, communities must find their own funding, or apply for funding from the Outreachy general fund. Once funding for one intern is secured, communities will be approved to participate in Outreachy.</p>
 
 <p>During the intern selection process, some communities may find they have more strong applicants than they have funding for. In that case, communities can apply to the Outreachy general fund for additional intern funding.</p>
 
