Update internship chat schedule
We decided to not have the mid-point discussion on what project tasks
interns were struggling with. A lot of interns were doing well by the
midpoint and didn't have anything they could relate to during the
discussion.

Instead, we'll move the career chat one week sooner, and add a chat at
the end that will get interns thinking about how they can continue their
work in open source. We'll talk about folding it into their academic
classes and research, volunteering, and perhaps working with future
Outreachy interns (as an informal volunteer, co-mentor, or full mentor).

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -260,9 +260,9 @@ Internship Guide | Outreachy Documentation
 			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Tips for remote work</td></tr>
 			<tr><th>{{ current_round.week_four_chat_text_date }} UTC</th><td>Share something you're stuck on</td></tr>
 			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Open source conferences (Alums invited!)</td></tr>
-			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Share one "easy" project goal that took longer than expected</td></tr>
-			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>Advancing your career (Alums invited!)</td></tr>
-			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Networking skills</td></tr>
+			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Advancing your career (Alums invited!)</td></tr>
+			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>Networking skills and informal chats</td></tr>
+			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Continuing your open source journey</td></tr>
 			<tr><th>{{ current_round.week_fourteen_chat_text_date }} UTC</th><td>Internship wrap up chat</td></tr>
 		</table>
 	{% endwith %}
@@ -274,9 +274,9 @@ Internship Guide | Outreachy Documentation
 			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Tips for remote work</td></tr>
 			<tr><th>{{ current_round.week_four_chat_text_date }} UTC</th><td>Share something you're stuck on</td></tr>
 			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Open source conferences (Alums invited!)</td></tr>
-			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Share one "easy" project goal that took longer than expected</td></tr>
-			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>Advancing your career (Alums invited!)</td></tr>
-			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Networking skills</td></tr>
+			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Advancing your career (Alums invited!)</td></tr>
+			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>Networking skills and informal chats</td></tr>
+			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Continuing your open source journey</td></tr>
 			<tr><th>{{ current_round.week_fourteen_chat_text_date }} UTC</th><td>Internship wrap up chat</td></tr>
 		</table>
 	{% endwith %}
