Add week 6 email - review internship timeline
Add the careers chat discussion description to the internship guide.

Move the intern and mentor conversation topic about reviewing the
timeline to week 6.

For the December 2022 cohort only: move the careers chat to week 6.
The following cohorts will have that chat in week 7. The chat section of
the week 6 email will be removed after I send it to the mentors and
interns.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -324,4 +324,17 @@ Internship Guide | Outreachy Documentation
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
+
+<a href="#week-7-chat"><h3 id="week-7-chat">Week 7 chat: Careers in Open Source</h3></a>
+
+<p>We'll be discussing all the different ways you can advance your career by participating in open source. The discussion will have two parts.</p>
+
+<p>The first part of the discussion will be everyone brainstorming different career paths in the technology industry and open source. Many people have part-time or full-time jobs working in the technology industry. Some people may be self-employed contractors, paid to work on open source. People may have taken a while to find a job. They may have participated in other internship programs, volunteer opportunities, grants, or networked at conferences and events.</p>
+
+<p>We encourage everyone to share their stories of how they advanced their career. What did you try that didn't work? Where did you hear about opportunities? How did you network and connect with people who helped you advance your goals?</p>
+
+<p>The second part of the discussion is brainstorming additional opportunities to work on open source. We encourage both mentors and interns to provide information about paid opportunities, but information about unpaid opportunities is also welcome. Sharing information about resource groups or job posting boards is also encouraged.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
 {% endblock %}
