Rework internship chat schedule and mentor/intern tasks
The new schedule for intern chats, blog posts, and mentor tasks is:

When?	Blog or action			Intern chat topic

week 5
	Explain your open source /
	open science project to
	a newcomer in a blog post
					Open source conferences chat

week 6
	Write midpoint report blog
					No chat

week 7
	Write about your career goals
					Careers in open source chat

week 9
	Work on your resume / LinkedIn
	Schedule informal chats
					Informal chats / networking chat

week 11
	Blog post on what you learned
	during an informal chat
					Continuing your
					open source journey chat
week 13
	Write final report blog
					Wrap-up chat

Move all descriptions of intern chats to the Internship Guide.

--- a/home/templates/home/dashboard/email/internship-week-11.html
+++ b/home/templates/home/dashboard/email/internship-week-11.html
@@ -1,4 +1,4 @@
-<p>Week 11: Topic is "Making connections." Make sure the <a href="{{ current_round.week_twelve_interviewing_chat_url }}">Outreachy topic URL</a> is created for the discussion on {{ current_round.week_twelve_chat_text_date }} UTC. Make sure to set this round's resume reviewer name ({{ current_round.resume_reviewer_name }}) and email &lt;{{ current_round.resume_reviewer_email }}&gt; in the Django admin console. Send another blog post prompt:
+<p>Week 11: Topic is "Continuing your open source journey." Make sure the <a href="{{ current_round.week_twelve_interviewing_chat_url }}">Outreachy topic URL</a> is created for the discussion on {{ current_round.week_twelve_chat_text_date }} UTC. Send another blog post prompt:
 <ul>
 	<li>Send the email after {{ due }}.</li>
 </ul>
