--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -27,6 +27,9 @@ Internship Guide | Outreachy Documentation
 		<ul>
 			<li><a href='#week-1-chat'>Week 1 chat: Tips for remote work</a></li>
 			<li><a href='#week-5-chat'>Week 5 chat: Conferences</a></li>
+			<li><a href="#week-7-chat">Week 7 chat: Careers in Open Source</a></li>
+			<li><a href="#week-9-chat">Week 9 chat: Networking and informal chats</a></li>
+			<li><a href="#week-11-chat">Week 11 chat: Continuing your open source journey</a></li>
 		</ul>
 	</li>
 </ol>
@@ -334,6 +337,55 @@ Internship Guide | Outreachy Documentation
 <p>We encourage everyone to share their stories of how they advanced their career. What did you try that didn't work? Where did you hear about opportunities? How did you network and connect with people who helped you advance your goals?</p>
 
 <p>The second part of the discussion is brainstorming additional opportunities to work on open source. We encourage both mentors and interns to provide information about paid opportunities, but information about unpaid opportunities is also welcome. Sharing information about resource groups or job posting boards is also encouraged.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<a href="#week-9-chat"><h3 id="week-9-chat">Week 9 chat: Networking and informal chats</h3></a>
+
+<p>Asking to network with another person can be intimidating. This chat will cover a low-stakes way to network with people. We call them "informal chats" or "coffee chats".</p>
+
+<p>An informal chat is an conversation with another person about their career or their role as a free software contributor. An informal chat lets you get insight into what they work on, how they got their job or became a leader in free software, and who they network with. After you talk with the person, you can ask them for three other people you can talk to. This helps you expand your network!</p>
+
+<p>We'll be discussing how to do an informal chat. We'll cover:
+
+<ul>
+	<li>What an informal chat is</li>
+	<li>Who you might want to approach</li>
+	<li>How to approach them</li>
+	<li>What questions you can ask</li>
+	<li>How to maximize your networking</li>
+</ul>
+</p>
+
+<p>For mentors and alums, please share your experiences with informal networking. Who did you ask to talk to? What did you feel (nervous, excited, etc)? What did you gain from networking? What tips would you give for someone who wants to network and learn about career opportunities in open source?</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<a href="#week-11-chat"><h3 id="week-11-chat">Week 11 chat: Continuing your open source journey</h3></a>
+
+<p>The goal for week 11 is for interns to brain storm ways they can continue to work on open source or open science.</p>
+
+<p>We'll be brainstorming next steps in our open source journey that we could take. Come share your ideas, hopes, and dreams. What you do envision your open source or open science journey to look like after your Outreachy internship ends?</p>
+
+<p>Ideas could include:
+<ul>
+	<li>using more open source in your projects</li>
+	<li>finding other open source internships</li>
+	<li>using open source in your student projects</li>
+	<li>finding a job in open source</li>
+	<li>becoming an open source contractor</li>
+	<li>identifying another project to work on within your open source or open science community</li>
+	<li>finding local open source or open science meet-ups to attend (or starting your own meet-up!)</li>
+	<li>attending virtual open source or open science events</li>
+	<li>helping applicants to the next Outreachy cohort</li>
+	<li>co-mentoring an Outreachy project with your mentor</li>
+</ul></p>
+
+<p>Outreachy mentors and alums are encouraged to share their open source journey. Think of an important moment in your life when you wanted to change your career or role in open source / open science. How did you think you would achieve it? How did you actually achieve it? What advice would you give to someone who wants to continue working or volunteering with open source and/or open science?</p>
+
+<p>Outreachy mentors are also encouraged to share how they became a mentor. There are many ways to provide mentorship, and becoming a mentor can seem intimidating. How did you start helping other people out? What are simple ways your intern can help other people?</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
