--- a/home/templates/home/snippet/eligibility_rules.html
+++ b/home/templates/home/snippet/eligibility_rules.html
@@ -1,16 +1,59 @@
 <p>Outreachy is open to applicants around the world. You will need to meet the following requirements:</p>
+
+<p><b>1. General eligibility</b></p>
 <ul>
-	<li>You are or will be 18 years of age or older by {{ current_round.internstarts }}</li>
-	<li>You are available for a full-time, 30 hours a week internship from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
-	<li>You were not an intern with Outreachy, the Outreach Program for Women, or Google Summer of Code. People who were a Google Summer of Code intern are not eligible for Outreachy. All Google Summer of Code interns are ineligible for Outreachy, including people who did not successfully finish their GSoC internship. If you apply to Outreachy and you are not accepted as an intern, you may apply again.</li>
-	<li>Applicants who have part-time or contracting jobs are welcome to apply. However, part-time jobs must be approved by Outreachy organizers. People who are willing to quit their full-time job are welcome to apply. If you cannot quit your full-time job, you are not eligible for Outreachy. People who are taking a leave of absence from a full-time job are not eligible for Outreachy.</li>
-	<li>Applicants are required to list their current jobs and internships on their initial application. If an applicant receives a job or internship offer after submitting an initial application, they should notify <a href="https://www.outreachy.org/contact/organizers/">Outreachy organizers</a> immediately. Applicants are required to document any changes from the time commitments listed on their initial application, by filling out the question about time commitment changes in their final applications.</li>
-	<li>Outreachy is open to both university students and people who are not university students. University students must have {{ current_round.minimum_days_free_for_students }} consecutive days free from school and exams during the internship period. Students must apply to the correct internship round (see rules below).</li>
-	<li>If you are a student on a student visa, your visa must allow you to work 30 hours per week. If you cannot work 30 hours per week, you are not eligible for Outreachy. If you are on a student visa in the United States of America, you might have limited dates when you can work 30 hours a week. We will work with you to shift your internship dates by up to five weeks. However, we cannot accommodate shortening the 13 week internship. If you are a student on an F-1 visa, you may need to apply for CPT with your university. Outreachy organizers can provide you documentation for your CPT application once you are selected as an intern.</li>
+	<li>You must be 18 years of age or older by {{ current_round.internstarts }}</li>
+	<li>You must be available for a full-time internship. Outreachy interns work 30 hours per week. The internship runs from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
+</ul>
+
+<p><b>2. Past internships</b></p>
+<ul>
+	<li>You are welcome to apply to Outreachy multiple times. However, you can only be accepted as an Outreachy intern once.</li>
+	<li>You must not be a past Outreachy intern.</li>
+	<li>You must not be a past Outreach Program for Women intern.</li>
+	<li>You must not be a past Google Summer of Code intern. All Google Summer of Code interns are ineligible for Outreachy. This includes people who did not successfully finish their Google Summer of Code internship.</li>
+</ul>
+
+<p><b>3. Current or future internships</b></p>
+<ul>
+	<li>The Outreachy internship runs from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
+	<li>You must not have another internship during the Outreachy internship period. This includes unpaid internships.</li>
+	<li>Applicants are required to list their current internships on their initial application. We understand you may be applying to many jobs. If you receive a job or internship offer, please notify <a href="https://www.outreachy.org/contact/organizers/">Outreachy organizers</a> immediately.</li>
+</ul>
+
+<p><b>4. Rules for people with jobs</b></p>
+<ul>
+	<li>The Outreachy internship runs from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
+	<li>You must not have a full-time job during the Outreachy internship.</li>
+	<li>You must not have a full-time contracting position during the Outreachy internship period.</li>
+	<li>You must not be on a leave of absence from a full-time job during the Outreachy internship.</li>
+	<li>If you are willing to quit your full-time job, you are welcome to apply to Outreachy. If you cannot quit your full-time job, you are not eligible for Outreachy.</li>
+	<li>If you have a part-time job, you are welcome to apply to Outreachy. Part-time jobs must be approved by Outreachy organizers.</li>
+	<li>Applicants are required to list their current jobs on their initial application. We understand you may be applying to many jobs. If you receive a job or internship offer, please notify <a href="https://www.outreachy.org/contact/organizers/">Outreachy organizers</a> immediately.</li>
+</ul>
+
+<p><b>5. Rules for people who are not students</b></p>
+<ul>
+	<li>People who are not students are welcome to apply to Outreachy.</li>
+	<li>Outreachy has two internship cohorts: May to August, and December to March. If you are not a student, you may apply to either internship cohort.</li>
+</ul>
+
+<p><b>6. Rules for students</b></p>
+<ul>
+	<li>Both students and people who are not students are welcome to apply to Outreachy.</li>
+	<li>University students must have {{ current_round.minimum_days_free_for_students }} consecutive days free from school and exams during the internship period.</li>
+	<li>Students must apply to the correct internship cohort (see rules below).</li>
 </ul>
 
 <p>Outreachy internships run twice a year, May to August and December to March. We have some rules around which internship round you can apply to:</p>
 <ul>
-	<li>If you are not a university student, you may apply to either internship round.</li>
 	{% include 'home/snippet/student_hemisphere.html' %}
 </ul>
+<p><b>7. Rules for students on visas</b></p>
+
+<ul>
+	<li>Your visa must allow you to work 30 hours per week. If you cannot work 30 hours per week, you are not eligible for Outreachy.</li>
+	<li>If you are on a student visa in the United States of America, you might have limited dates when you can work 30 hours a week. We will work with you to shift your internship dates by up to five weeks. However, we cannot accommodate shortening the 13 week internship.</li>
+	<li>If you are a student on an F-1 visa, you may need to apply for CPT with your university. Outreachy organizers can provide you documentation for your CPT application once you are selected as an intern.</li>
+</ul>
+
