Remove repeated about from essay content section

--- a/home/templates/home/docs/essay-tips-snippet.html
+++ b/home/templates/home/docs/essay-tips-snippet.html
@@ -27,7 +27,7 @@ One question asks about discrimination in your learning environment.
 
 <p>
 We are <b>not</b> asking you to provide details about your completed classes, your educational background, or what skills you have.
-We are asking you to talk about about the <b>discrimination</b> you face in your learning environment or while building your skills.
+We are asking you to talk about the <b>discrimination</b> you face in your learning environment or while building your skills.
 </p>
 
 <p>
