add the correct link to Internship Guide

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -34,7 +34,7 @@ The Applicant Guide includes tips for getting your initial application accepted.
 
 <h2>Internship Guide</h2>
 <p>
-The Outreachy <a href='{% url 'docs-applicant' %}'>Internship Guide</a> includes detailed information about the internship schedule, payment schedule, blogging schedule, and other details.
+The Outreachy <a href='{% url 'docs-internship' %}'>Internship Guide</a> includes detailed information about the internship schedule, payment schedule, blogging schedule, and other details.
 </p>
 
 {% if not current_round.initial_applications_open.has_passed %}
